Fix: Dodgy Logo misalignment
The 'Scotland' Text was too much to the left and this would have made
it difficult to read. A browser check is still needed but fixed for
firefox and chrome on linux at least for now.

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ h1{
   letter-spacing: 1em;
   font: normal 30px arial;
   margin: 30px 10px 29px 220px;
-  padding: 15px 10px 25px 50px;
+  padding: 15px 10px 25px 140px;
   text-shadow: 1px 1px 1px 2px;
   float:left;
 }
